// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmCard rendering 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/fantastic-beasts-the-crimes-of-grindelwald.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Fantastic Beasts: The Crimes of Grindelwald
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 2`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/bohemian-rhapsody.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Bohemian Rhapsody
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 3`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/macbeth.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Macbeth
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 4`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/aviator.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Aviator
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 5`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/we-need-to-talk-about-kevin.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      We need to talk about Kevin
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 6`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/snatch.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Snatch
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 7`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/revenant.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Revenant
    </a>
  </h3>
</article>
`;

exports[`FilmCard rendering 8`] = `
<article
  className="small-movie-card catalog__movies-card"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="small-movie-card__image"
  >
    <video
      height="175"
      poster="img/johnny-english.jpg"
      width="280"
    >
      <source
        type="video/webm; codecs=\\"vp8, vorbis\\""
      />
      <source
        type="video/ogg; codecs=\\"theora, vorbis\\""
      />
      <source
        type="video/mp4; codecs=\\"avc1.42E01E, mp4a.40.2\\""
      />
    </video>
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Johnny English
    </a>
  </h3>
</article>
`;
